# privateseo-metrika-bot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: test.yml
deploy/: nginx.conf.example  nginx.http.conf  privateseo-metrika-bot.service
metrika_bot/: __init__.py  __main__.py  analysis.py  bot.py  config.py  crypto.py  db.py  telegram.py  web.py  yandex.py
tests/: test_analysis.py  test_crypto.py  test_db.py  test_telegram.py  test_yandex.py
